Raise exception if there is bibfile is None and there is no
bibliography call in the .tex file.

*****

Implemented bibtex command-line interface and documentation.

*****

Renamed setup command to config.

*****

Added 'bold face' to some titles in command-line interface text.

*****

Renamed Sauthor() namedtuple to Sort_author().
Re-arranged Author() fields to be consistent with Sort_author().

*****

Modified Bib.__containts__() to match only against the first author
if the querry string begins with '^'.

*****

Raise exceptions for invalid inputs in parse_name().

*****

Re-factored bm.search() to search multiple authors.
Renamed 'author' argument to 'authors'.
Raise exceptions for invalid inputs.

******

Tweaked display_bibs() function to receive None as labels argument.
Added the function to __all__.

*****

Implemented repr_author() function to get a string representation of
an Author namedtuple in 'von Last, Jr, First' format.


*****  Fri Dec 28 09:51:56 CLT 2018  *****

Implemented get_authors() method for Bib() object, to get the string
representation of the author list of the entry.

*****

Implemented search command-line interface and documentation.

*****

Added license to main CLI docs.

*****

Bumped bibmanager version to 0.3.0.
This next merge closes #8


*****  Sat Dec 29 17:05:22 CLT 2018  *****

Implemented clear_latex(), compile_latex(), and compile_pdflatex()
in latex_management.py.  These functions compile a .tex file into
pdf using the latex or pdflatex directives.

Implemented ignored() context manager to simplify file deletions
withour running into exceptions.

*****

Added cd() context manager to change folders.

*****

Modified compile_latex() and compile_pdflatex() to work when called
from different folders where the .tex file is.

*****

Implemented pdflatex command-line interface and documentation.
Renamed pdftex to pdflatex to avoid confusion.

*****

Implemented latex command-line interface and documentation.

*****
