@@ -22,20 +22,18 @@ def ignored(*exceptions):
         pass
 
 
-class cd:
+@contextmanager
+def cd(newdir):
     """
     Context manager for changing the current working directory.
     Taken from here: https://stackoverflow.com/questions/431684/
     """
-    def __init__(self, newPath):
-        self.newPath = os.path.expanduser(newPath)
-
-    def __enter__(self):
-        self.savedPath = os.getcwd()
-        os.chdir(self.newPath)
-
-    def __exit__(self, etype, value, traceback):
-        os.chdir(self.savedPath)
+    olddir = os.getcwd()
+    os.chdir(os.path.expanduser(newdir))
+    try:
+        yield
+    finally:
+        os.chdir(olddir)
 
 
 def no_comments(text):
